<resources>
    <string name="app_name">guide-my-own</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="map_type">Map Type</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="request_permission_sd">This sample needs sd card permission.</string>
    <string name="upload_profile_photo">Please Grant Permissions to upload profile photo.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Introductory message</string>


    <!-- Map -->
    <string name="choose_map_type">Choose Map Type</string>
    <string name="map_normal">Normal</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_terrain">Terrain</string>

    <string name="map">Map</string>
    <string name="im_sure">I\'m sure</string>
    <string name="retry">Retry</string>
    <string name="exit_app">Exit App</string>
    <string name="open">Open</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permissions_denied_message">You need to allow "location access" before you can use the app. </string>
    <string name="getting_your_location">Getting your location</string>
    <string name="building_path">Building path</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="use_photo">Use photo</string>
    <string name="ENABLE">ENABLE</string>
    <string name="Failed">Failed</string>

    <string name="BackDropBottomSheetBehavior" translatable="false">diploma.edu.zp.guide_my_own.lib.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike" translatable="false">diploma.edu.zp.guide_my_own.lib.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior" translatable="false">diploma.edu.zp.guide_my_own.lib.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior" translatable="false">diploma.edu.zp.guide_my_own.lib.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior" translatable="false">diploma.edu.zp.guide_my_own.lib.ScrollingAppBarLayoutBehavior</string>
    <string name="location_access_disabled">Location access disabled</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>

    <!-- MY PLACES -->
    <string name="my_places">My Places</string>
    <string name="FB_Login">FB Login</string>
    <string name="no_places_defined">No places defined</string>
    <string name="delete">Delete</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <!-- Create Place -->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="indefined">Indefined</string>

    <!--Dialogs-->
    <string name="alert">Alert</string>
    <string name="logo">Logo</string>
    <string name="can_not_get_loc">Can\'t get your location</string>
    <string name="create_new_place">Create new place!</string>
    <string name="want_create_place">Do you want to create?</string>
    <string name="place_added_successful">Place was added successful!</string>
    <string name="km"> km</string>
    <string name="m"> m</string>
    <string name="wait_loc_gotten">Please wait when your location will be gotten</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_place_name">Please enter place name</string>
    <string name="you_sure">Are you sure?</string>
    <string name="you_lose_this_place">You\'ll lose this place</string>
    <string name="deleted_success">Place was deleted successfully</string>
    <string name="you_have_successfully_registered">You have successfully registered</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="todo">TODO</string>
    <string name="repeat">repeat</string>
    <string name="Camera">Camera</string>
    <string name="try_again">Try Again</string>


    <string name="facebook_app_id">1841994936099181</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1841994936099181</string>
    <string name="fabric_api_key" translatable="false">78773a9f8e6c8b7ff532eedabadf412e08f4d21b</string>
    <string name="place_name">Place name</string>
    <string name="please_register">Please register</string>
    <string name="editing_was_successful">editing was successful</string>
    <string name="you_canceled">You canceled</string>
    <string name="you_shared_the_photo">You shared the photo</string>

    <!--toast-->
    <string name="please_take_a_picture">"Please take a picture"</string>
    <string name="no_internet_connection">"No internet connection"</string>

</resources>
